gcc/testsuite/rust/rustc/ui/resolve/issue-109153_dg.rs
use foo::*;

mod foo {
    pub mod bar {
        pub mod bar {
            pub mod bar {}
        }
    }
}

use bar::bar; // { dg-error ".E0659." "" { target *-*-* } }
use bar::*;

fn main() { }

